# cipherly

./: .env  Dockerfile  README.md  build.sh  cipherly.code-workspace  deploy.sh  main.py  requirements.txt  secret.code-workspace  test.http
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  README.md  cipherly.py  main.py  pyproject.toml  requirements.txt  test.http
backend/src/: google.rs  kek.rs  key.rs  main.rs
backend/src/testdata/: alice.sealed  certs.json  pk.pem
backend/tests/: test_e2e.py  test_envelope.py
frontend/: .gitignore  .prettierrc  README.md  cipherly.ts  components.json  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: App.svelte  app.d.ts  app.html  app.pcss
frontend/src/lib/: auth.ts  cipherly.test.ts  cipherly.ts  config.ts  form.ts  utils.ts
frontend/src/lib/components/: Alert.svelte  Avatar.svelte  Banner.svelte  Chip.svelte  CopyText.svelte  DarkModeToggle.svelte  EncryptionAlert.svelte  Footer.svelte  IconText.svelte  Input.svelte  Label.svelte  Main.svelte  Navbar.svelte  PlainTextInput.svelte  PrimaryNav.svelte  SecondaryNav.svelte  Section.svelte  SideNav.svelte  TabsNav.svelte  TextOrFileInput.svelte  TextOrFileOutput.svelte  Textarea.svelte  ValidationError.svelte  YouTubeVideoCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  App.svelte  Sidebar.svelte  login.svelte  navigation.svelte  sidebar.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/decrypt/: +page.svelte  auth.svelte  password.svelte
(+29 files in other folders)
