[package]
name = "cipherly"
version = "0.1.0"
edition = "2021"
default-run = "cipherly"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.0"
chrono = "0.4.35"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.12.0", features = ["blocking"] }
rmp-serde = "1.1.2"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
