[tool.poetry]
name = "cipherly"
version = "0.0.1"
description = "A webapp that enables the secure sharing of secrets."
authors = ["Shad Sharma <shadanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = { extras = ["standard"], version = "^0.27.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
